httpd-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpd-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    argocd.argoproj.io/hook: PreSync
