httpd-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: httpd
